# team-mates

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix  ng-script.sh  package copy.json  package-lock.json  package.json
dnas/team-mates/workdir/: dna.yaml
dnas/team-mates/zomes/coordinator/invitation/: Cargo.toml
dnas/team-mates/zomes/coordinator/invitation/src/: lib.rs
dnas/team-mates/zomes/integrity/invitation/: Cargo.toml
dnas/team-mates/zomes/integrity/invitation/src/: lib.rs
old-ui/: README.md  angular.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
old-ui/.angular/cache/13.1.4/angular-webpack/be74230a16769b6d10ba173e5838fd2dbf1f1ccc/: 1.pack  2.pack  index.pack  index.pack.old
old-ui/a_temp_files/: package_diff
old-ui/a_temp_files/edit-invitation/: edit-invitation.component.ts
old-ui/src/: index.html  polyfills.ts  styles.scss
old-ui/src/app/components/: container.component.html
old-ui/src/app/components/invitation/: invitation.component.html
old-ui/src/app/components/invitation/teams/: teams.component.html  teams.component.ts
old-ui/src/app/components/profiles/all-profiles/: all-profiles.component.html
old-ui/src/app/components/profiles/profile/: profile.component.html  profile.component.ts
old-ui/src/app/components/profiles/registration/: registration.component.ts
old-ui/src/app/helpers/: utils.ts
old-ui/src/app/services/: holochain.service.ts  profile.service.ts
old-ui/src/app/store/: profile.store.ts
old-ui/src/environments/: environment.mock.ts  environment.player2.ts  environment.prod.ts  environment.ts
tests/: package.json
tests/src/: index.ts
tests/src/invitations/invitation/: common.ts  invite.test.ts
tests/src/zomes/chess/: index.ts
tests/src/zomes/starter-ui/: invitations.ts
ui/: .gitignore  README.md  angular.json  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json
ui/src/: index.html  main.ts  styles.scss
ui/src/app/: app.component.ts  app.module.ts
ui/src/app/components/: container.component.html  container.component.ts  profile-invitation.component.html  profile-invitation.component.ts  profile-invitation.html
ui/src/app/components/invitation/: invitation.component.html  invitation.component.ts
ui/src/app/components/invitation/create-invitation/: create-invitation.component.html  create-invitation.component.ts
ui/src/app/components/invitation/edit-invitation/: edit-invitation.component.html  edit-invitation.component.ts
ui/src/app/components/invitation/list-invitations/: list-invitations.component.html  list-invitations.component.scss  list-invitations.component.ts  tailwind_version.html
ui/src/app/components/invitation/teams/: teams.component.html  teams.component.ts
ui/src/app/components/person-container-component/: person-container.component.html  person-container.component.ts
ui/src/app/components/person-container-component/edit-display/: edit-display.component.ts
ui/src/app/components/person-container-component/edit-person/: edit-person.component.ts
ui/src/app/components/person-container-component/person-list/: person-list.component.html  person-list.component.ts
ui/src/app/components/person-container-component/save-person-component/: save-person-component.component.ts
ui/src/app/components/profile/: profile.component.html  profile.component.ts
ui/src/app/components/profiles/all-profiles/: all-profiles.component.html  all-profiles.component.ts
ui/src/app/components/registration/: registration.component.html  registration.component.ts
ui/src/app/helpers/: material.module.ts  utils.ts
ui/src/app/models/: api-response.ts  holon.ts  invitation.ts  person.ts  profile.ts  typedescriptor.ts
ui/src/app/receptors/: invitation.receptor.ts  profile.receptor.ts  typedescriptor.receptor.ts
ui/src/app/services/: holochain.service.ts  invitation.service.ts  profile.service.ts  star-wars-api.service.ts  store.factory.service.ts
ui/src/app/store/: invitation.store.oldts  invitation.store.ts  person.store.ts  profile.store.ts  profiles.store.ts
ui/src/app/stores/: invitation.store.ts  profile.store.ts
ui/src/environments/: environment.mock.ts  environment.player2.ts  environment.prod.ts  environment.ts
workdir/: happ.yaml  web-happ.yaml
workdir/dna/: dna.yaml
workdir/happ/: happ.yaml
zomes/dna/invitations/: Cargo.toml
zomes/dna/invitations/src/: lib.rs
zomes/dna/profiles/: Cargo.toml
zomes/invitations/: Cargo.toml
zomes/invitations/src/: lib.rs
zomes/profiles/: Cargo.toml
zomes/rna/invitations/: Cargo.toml
zomes/rna/invitations/src/: lib.rs
(+4 files in other folders)
