
[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
resolver ="2"
members = ["zomes/rna/*", "zomes/dna/*"]

[workspace.dependencies]
hdi = "=0.2"
hdk = "=0.1"
serde = "1"

[workspace.dependencies.invitations]
path = "zomes/rna/invitations"

[workspace.dependencies.invitations_dna]
path = "zomes/dna/invitations"

[workspace.dependencies.profiles]
path = "zomes/rna/profiles"

[workspace.dependencies.profiles_integrity]
path = "zomes/dna/profiles"