[package]
authors = ["manuel.r.puentes.d@gmail.com"]
edition = "2018"
name = "hc_zome_invitations"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_invitations"

[dependencies]
hc_zome_invitations = {git = "https://github.com/holochain-engineers/invitations", rev = "176c63b4f44890e52d72ae4db348026c7fd6de13"}
