[package]
authors = ["guillem.cordoba@gmail.com"]
edition = "2018"
name = "hc_zome_profiles"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "profiles"

[dependencies]
hc_zome_profiles = {git = "https://github.com/holochain-open-dev/profiles", branch = "main", package = "hc_zome_profiles"}
hdk = "0.0.118"