[package]
name = "invitations_dna"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "invitations_dna"

[dependencies]
hc_zome_invitations_dna = {git = "https://github.com/holochain-engineers/invitations", branch = "main"}
hdi = { workspace = true }
serde = { workspace = true }