[package]
name = "invitation"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "invitation"

[dependencies]
hc_zome_invitation_coordinator = {git = "https://github.com/holochain-engineers/invitations", package = "hc_zome_invitation_coordinator"}
hdk = { workspace = true }
serde = { workspace = true }
invitation_integrity = { workspace = true }